<resources>
    <string name="app_name">Marvel App</string>
    <string name="character">Character</string>
    <string name="show_more">Show more</string>
    <string name="characters">Characters</string>
    <string name="failed_to_load_data">Failed to load data :|</string>
    <string name="try_again">Try Again</string>
    <string name="navigate_up">Navigate Up</string>
    <string name="character_image">Character Image</string>
    <string name="url">Url:</string>
    <string name="visit">Visit</string>
    <string name="comics">Comics</string>
</resources>