<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.ahmed.marvelapp.ui.characters.CharactersFragmentViewModel" />
        <variable
            name="item"
            type="com.ahmed.marvelapp.data.response.Character" />
        <variable
            name="listener"
            type="com.ahmed.marvelapp.ui.base.BaseInteractionListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/top_app_bar_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_8"
            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_backward_arrow"
                app:tint="@color/primary_color"
                android:layout_marginEnd="@dimen/_16"
                android:contentDescription="@string/navigate_up"
                android:padding="@dimen/_8"
                android:onClick="@{()->viewModel.onNavigateUpClickListener()}"
                android:background="@drawable/circle_ripple_effect"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/characters"
                android:textColor="@color/primary_color"
                style="@style/FontStyle.Headline6"
                android:layout_marginEnd="@dimen/_8"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:spanCount="2"
            app:spacingEdgeEnabled="@{true}"
            app:spacingSize="@{16L}"
            app:layout_constraintTop_toBottomOf="@id/top_app_bar_linear_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/item_character"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminateTint="@color/primary_color"
            app:showWhenLoading="@{viewModel.requestState}"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            app:showWhenError="@{viewModel.requestState}"
            android:layout_marginHorizontal="@dimen/_16"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/failed_to_load_data"
                android:textColor="@color/subtitle_color"
                android:textAlignment="center"
                style="@style/FontStyle.Headline6"
                android:layout_marginBottom="@dimen/_8"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/try_again"
                android:textAllCaps="false"
                android:textColor="@color/primary_color"
                android:background="@drawable/outlined_shape"
                android:onClick="@{()->viewModel.tryLoadDataAgain()}"
                style="@style/FontStyle.Button" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>