<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.ahmed.marvelapp.ui.home.HomeFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/primary_color"
            android:layout_margin="@dimen/_16"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/TextAppearance.MaterialComponents.Headline5"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_16"
            app:layout_constraintTop_toBottomOf="@id/app_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:showWhenSuccess="@{viewModel.requestState}"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminateTint="@color/primary_color"
            app:showWhenLoading="@{viewModel.requestState}"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            app:showWhenError="@{viewModel.requestState}"
            android:layout_marginHorizontal="@dimen/_16"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/failed_to_load_data"
                android:textColor="@color/subtitle_color"
                android:textAlignment="center"
                style="@style/FontStyle.Headline6"
                android:layout_marginBottom="@dimen/_8"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/try_again"
                android:textAllCaps="false"
                android:textColor="@color/primary_color"
                android:background="@drawable/outlined_shape"
                android:onClick="@{()->viewModel.tryLoadDataAgain()}"
                style="@style/FontStyle.Button" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>